@@ -1294,7 +1294,7 @@ end</example>
 		<command id="initmouse">
 			<canon>init mouse</canon>
 			<shortname>init mouse</shortname>
-			<description>Initializes the mouse, returning <ref>true</ref> if one is present. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, and causes mouse clicks to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor on screen - your script must do this itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
+			<description>Informs the engine that you intend to use the mouse. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, and causes mouse clicks to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor onscreen - your script must do this itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
 			<example>include,plotscr.hsd
 
 #Mouse cursor example
@@ -1327,6 +1327,11 @@ end</example>
 			<canon>mouse button (which)</canon>
 			<shortname>mouse button</shortname>
 			<description>Returns <ref>true</ref> if the specified mouse button is pressed. You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button.</description>
+		</command>
+		<command id="mouseclick">
+			<canon>mouse click (which)</canon>
+			<shortname>mouse click</shortname>
+			<description>Returns <ref>true</ref> if the specified mouse button has been clicked in the last tick. You can use the constants <ref>leftbutton</ref> and <ref>rightbutton</ref> to specify the button.</description>
 		</command>
 		<command id="putmouse">
 			<canon>put mouse (X, Y)</canon>
